# pibridge

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  compat-smoke.yml
docs/: compatibility-policy.md  dataset-triage-assistant.md  pi-rpc-python.md  release-checklist.md
examples/: bash_then_prompt.py  basic_prompt.py  extension_ui.py  review_gate_ui.py  runtime_config.py  session_flow.py
examples/dataset_triage/: README.md  __init__.py  app.py  export.py  loader.py  models.py  pi_session.py  profiler.py  prompts.py
examples/extensions/: review_gate.ts
src/pi_rpc/: __init__.py  client.py  commands.py  events.py  exceptions.py  jsonl.py  models.py  process.py  protocol_types.py  responses.py  subscriptions.py
tests/: conftest.py  example_support.py
tests/integration/: conftest.py  test_bash_and_sessions.py  test_dataset_triage_app.py  test_dataset_triage_session.py  test_examples_smoke.py  test_extension_ui.py  test_live_smoke.py  test_models_and_queue_modes.py  test_restart_and_failures.py  test_startup_and_state.py  test_streaming.py  test_subscription_contract.py
tests/packaging/: install_smoke.py
tests/unit/: test_client.py  test_dataset_triage_export.py  test_dataset_triage_loader.py  test_dataset_triage_profiler.py  test_dataset_triage_prompts.py  test_dataset_triage_session.py  test_example_runtime_config.py  test_examples.py  test_failures.py  test_imports.py  test_install_smoke.py  test_integration_gating.py  test_jsonl.py  test_process.py  test_protocol.py  test_subscriptions.py
(+3 files in other folders)
