[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-rpc-python"
version = "0.1.0"
description = "Protocol-faithful Python wrapper for Pi RPC mode"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Pi Bridge" }]
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.13.1",
]
examples = [
  "pandas>=2.2.3",
  "streamlit>=1.43.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "integration: tests that exercise a real pi --mode rpc process",
]

[tool.ruff]
line-length = 320
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["pi_rpc"]
